Move server files from resources to tmpdir.

--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ repositories {
 }
 
 dependencies {
+    implementation "commons-io:commons-io:2.8.0"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.7.0"
     testImplementation "com.squareup.okhttp3:okhttp:4.9.0"
     testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.0"
